# plasma-disks

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  org.kde.plasma.disks.metainfo.xml
autotests/: CMakeLists.txt  smartdatatest.cpp  smartmonitortest.cpp
autotests/fixtures/: simulation.qrc
cmake/: Findsmartctl.cmake
po/ar/: kcm_disks.po  plasma_disks.po
po/ast/: kcm_disks.po
po/az/: kcm_disks.po  plasma_disks.po
po/bg/: kcm_disks.po  plasma_disks.po
po/ca/: kcm_disks.po  plasma_disks.po
po/ca@valencia/: kcm_disks.po  plasma_disks.po
po/cs/: kcm_disks.po  plasma_disks.po
po/da/: kcm_disks.po  plasma_disks.po
po/de/: kcm_disks.po  plasma_disks.po
po/el/: kcm_disks.po  plasma_disks.po
po/en_GB/: kcm_disks.po  plasma_disks.po
po/eo/: kcm_disks.po  plasma_disks.po
po/es/: kcm_disks.po  plasma_disks.po
po/et/: kcm_disks.po  plasma_disks.po
po/eu/: kcm_disks.po  plasma_disks.po
po/fi/: kcm_disks.po  plasma_disks.po
po/fr/: kcm_disks.po  plasma_disks.po
po/ga/: kcm_disks.po  plasma_disks.po
po/gl/: kcm_disks.po  plasma_disks.po
po/he/: kcm_disks.po  plasma_disks.po
po/hi/: kcm_disks.po
po/hu/: kcm_disks.po  plasma_disks.po
po/ia/: kcm_disks.po  plasma_disks.po
po/id/: kcm_disks.po  plasma_disks.po
po/is/: kcm_disks.po  plasma_disks.po
po/it/: kcm_disks.po  plasma_disks.po
po/ja/: kcm_disks.po  plasma_disks.po
po/ka/: kcm_disks.po  plasma_disks.po
po/ko/: kcm_disks.po  plasma_disks.po
po/lt/: kcm_disks.po  plasma_disks.po
po/lv/: kcm_disks.po
po/nl/: kcm_disks.po  plasma_disks.po
po/nn/: kcm_disks.po  plasma_disks.po
po/pa/: kcm_disks.po  plasma_disks.po
po/pl/: kcm_disks.po  plasma_disks.po
po/pt/: kcm_disks.po  plasma_disks.po
po/pt_BR/: kcm_disks.po  plasma_disks.po
po/ro/: kcm_disks.po  plasma_disks.po
po/ru/: kcm_disks.po  plasma_disks.po
po/sa/: kcm_disks.po
po/sk/: kcm_disks.po  plasma_disks.po
po/sl/: kcm_disks.po  plasma_disks.po
po/sv/: kcm_disks.po  plasma_disks.po
po/ta/: kcm_disks.po
po/tr/: kcm_disks.po  plasma_disks.po
po/uk/: kcm_disks.po  plasma_disks.po
po/zh_CN/: kcm_disks.po  plasma_disks.po
po/zh_TW/: kcm_disks.po  plasma_disks.po
src/: CMakeLists.txt  Messages.sh  dbusobjectmanagerserver.cpp  dbusobjectmanagerserver.h  device.cpp  device.h  devicenotifier.cpp  helper.cpp  helper.h  instabilities.cpp  main.cpp  org.kde.kded.smart.actions  org.kde.kded.smart.notifyrc  simulationctl.cpp  simulationdevicenotifier.cpp  smart.desktop  smart.json  smartctl.cpp  smartctl.h  smartdata.cpp  smartdata.h  smartfailure.cpp  smartfailure.h  smartmonitor.cpp  smartmonitor.h  smartnotifier.cpp  smartnotifier.h  soliddevicenotifier.cpp
src/kcm/: CMakeLists.txt  devicemodel.cpp  devicemodel.h  kcm_disks.json  main.cpp  module.cpp  module.h  org.freedesktop.DBus.ObjectManager.xml  org.freedesktop.DBus.Properties.xml  org.kde.kinfocenter.smart.xml  servicerunner.cpp  servicerunner.h  smart.desktop
src/kcm/package/: metadata.desktop
src/kcm/package/contents/: main.qml
src/kcm/ui/: ReportPage.qml  main.qml
